# abseil_protobuf_cmake

./: .gitmodules  CMakeLists.txt  README.md  tamachan.cpp
protos/: message.proto
